# fastapi-ragging

./: .gitignore  README.md  bootstrap.py  config.py  embedding_tools.py  indexer.py  main.py  models.py  pyproject.toml  routes.py  runner.sh  search.py
app_logging/: __init__.py  custom_logging.py  logging.config.json
logging/: __init__.py  custom_logging.py
tasks/: log_handling.py  qdrant_handling.py
