[tool.poetry]
name = "fastapi-ragging"
version = "0.1.0"
description = ""
authors = ["Artur Das <me@artur.wtf>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
uvicorn = "^0.28.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
ipdb = "^0.13.13"
black = "^24.2.0"
pyright = "^1.1.354"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
